--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             <div>7</div>
             <div>8</div>
         </div>
+
+        <div class="grid-02">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+        </div>
+
+
     </main>
 
     <footer>
